syntax = "proto3";

option go_package = "tb/api/admin/v1;adminv1";

package tb.admin.v1;

service Admin {
  rpc ServerInfo(ServerInfoRequest) returns (ServerInfoResponse);
}

message ServerInfoRequest {

}

message ServerInfoResponse {
  string host_name = 1;
  string version = 2;
}
